--- a/Experiment 1.1
+++ b/Experiment 1.1
@@ -25,4 +25,4 @@ void main() {
 		printf("The key element %d is not found in the array\n", key); 
 	}
 }
-zgchgzvcybzczc gz cgzd cygvcysvcusc bsd cusyush csiucg scg sc sdygc scshcsicbagdgscvsbhc saucvasgc asc
+zgchgzvcybzczc gz cgzd cygvcysvcusc bsd cusyush csiucg scg sc sdygc scshcsicbagd
