--- a/Experiment 10.1
+++ b/Experiment 10.1
@@ -62,4 +62,4 @@ void prims() {
 	printf("The edges of Minimum Cost Spanning Tree are : \n");
 	prims();
 }
-nfnbvdhbvidbvdv df fviubduyfbdfuivdyv dv sshvdugasydvb sudhc
+bduyfbdfuivdyv dv sshvdugasydvb sudhc
