--- a/Experiment 9.2
+++ b/Experiment 9.2
@@ -97,4 +97,4 @@ void main() {
 	BFS(v);
 	printf("\n");
 }
-dsfkjsfj sfj fbufbui frierutgwriurbnuiaremtuirewn tuertnioernounbreuiotgb rie yrinyurenty itreyhero geot 
+dsfkjsfj sfj fbufbui frierutgwriurbnuiaremtuirewn tuertnioernounbreuiotgb rie yrinyurenty
