--- a/Experiment 1.1
+++ b/Experiment 1.1
@@ -25,4 +25,4 @@ void main() {
 		printf("The key element %d is not found in the array\n", key); 
 	}
 }
-aryan c raut bjbcsjbos csucsj ccs cjsdcsvjs vjscjoubvd dfjaf[shifvsofuibs
+asj ccs cjsdcsvjs vjscjoubvd dfjaf[shifvsofuibs
