--- a/Experiment 1.1
+++ b/Experiment 1.1
@@ -25,4 +25,4 @@ void main() {
 		printf("The key element %d is not found in the array\n", key); 
 	}
 }
-asj ccs cjsdcsvjs vjscjoubvd dfjaf[shif
+asj ccs cjsdcsvjs vj
